Programming Guide: updates based on print version
[ ] May break build
[ ] Breaks existing applications
[ ] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[x] Documentation

--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -23,7 +23,7 @@
   {\Large\sffamily The official reference for creating parallel,
     scalable OpenGL\texttrademark\ applications with the Equalizer
     parallel rendering framework}\\\vspace{1cm}
-  Version 1.4 for Equalizer 0.6\\[\medskipamount]
+  Version 1.5.1 for Equalizer 0.6+svn\\[\medskipamount]
 %  \today
 }
 
@@ -117,6 +117,7 @@ The images on the back page show the following scalable rendering modes:
     1.0     & Oct 28, 2007 & Initial Version for Equalizer 0.4\\
     1.2     & Apr 15, 2008 & Revision for Equalizer 0.5\\
     1.4     & Nov 25, 2008 & Revision for Equalizer 0.6\\
+    1.5.1   & Dec 08, 2008 & Minor updates based on the print version\\
     \hline
   \end{tabularx}}
 \clearpage
@@ -3397,8 +3398,8 @@ the same time by the server during \textsf{Config::init}. Each statistic
 event records the originator's (channel, window, node or config) unique
 identifier.
 
-\begin{wrapfigure}{r}{.382\textwidth}
-  \includegraphics[width=.382\textwidth]{images/statistics.png}
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/statistics.png}
   {\caption{\small\label{fStatistics}Statistics for a two-node 2D compound}}
 \end{wrapfigure}
 Statistics are enabled per entity using an attribute hint. The hint
